fixed layout with flex wrapping

--- a/src/index.css
+++ b/src/index.css
@@ -9,12 +9,7 @@ body {
   }
 
   @layer components {
-    .card {
-        @apply h-auto max-h-36 w-auto m-2 shadow-lg bg-white text-slate-800
-        rounded-lg transition-all duration-300 ease-in;
-    }
-
     .tracker {
-        @apply bg-gray-600 flex-none w-1/6
+      @apply bg-gray-600 flex-none w-1/6 h-screen
     }
   }
